# upserver

./: .bandit  .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  config-example-advanced.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
scripts/: build_helper.py
tests/: __init__.py  test_server.py
upserver/: __init__.py  cli.py  config.py  handlers.py  logging_config.py  server.py  templates.py  utils.py
